# reviews-widget

./: .gitignore  Cargo.toml  README.md  Rocket.toml  readme.md  test.html
.github/workflows/: create_release.yml  rust.yml  webpack.yml
docs/: index.html  preview.html
docs/css/: preview.css
docs/js/: preview.js
server/: Cargo.toml
server/src/: error.rs  main.rs
server/src/data_handler/: fetch_data.rs  mod.rs  typedef.rs
server/src/route_handlers/: widget.rs
server/static/: example.html  index.css
src/: main.rs
src/crawler/: crawl.rs
src/fetcher/: fetch.rs
src/http/: headers.rs  mod.rs  ratelimits.rs  server.rs
static/: standard.css
templates/: error.html.hbs  reviews-widget.hbs  reviews-widget.html.hbs
widget/: package.json  tsconfig.json  webpack.config.js
widget/src/: api.ts  check_attributes.ts  config.ts  index.ts  logger.ts
widget/src/render/: error.module.css  error.ts  index.module.css  index.ts  utils.ts
widget/src/render/components/: image.ts  star.module.css  star.ts  watermark.module.css  watermark.ts
widget/src/render/widgets/: button.ts  review_cards.module.css  review_cards.ts  review_count.module.css  review_count.ts  small.module.css  small.ts  star_row.module.css  star_row.ts
