[package]
name = "reviews_widget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
rocket = { version = "0.5.0-rc.2", features = ["json"] }
urlencoding = "2.1.2"