[package]
name = "reviews_widget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serde
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }

# time
chrono = "0.2.16"

# HTTP server
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["handlebars"] }

# HTTP fetching
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dependencies.rocket_contrib]