[package]
name = "reviews-widget"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
reqwest = {version="0.12.15", features=["json"]}
serde = { version = "1.0.219", features=["derive"]}
serde_json = "1.0"
thiserror = "2.0.12"
cached = { version="0.55.1", features=["async"] }
actix-governor = "0.8.0"
chrono = "0.4.40"
validator = { version = "0.19", features= ["derive"] }
